--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/index.scss
@@ -1,8 +1,10 @@
 .log-cluster-table-container-main {
-  min-height: calc(100vh - var(--header-height) - var(--top-searchbar-height) - 100px);
+  height: calc(100vh - 200px);
   background-color: #fff;
+  overflow: hidden;
 
   .log-cluster-table-container {
     height: 100%;
+    overflow: visible;
   }
 }
