--- a/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/index.scss
+++ b/bklog/web/src/views/retrieve-v3/search-result/log-clustering/log-table/content-table/index.scss
@@ -1,6 +1,4 @@
 .log-content-table-main {
-  overflow-x: hidden;
-
   .collpase-main {
     width: 100%;
     height: 36px;
@@ -72,6 +70,7 @@
 
   .log-content-table-wraper {
     width: 100%;
+    overflow-x: hidden;
 
     .log-content-table {
       width: 100%;
@@ -119,19 +118,6 @@
                 display: block;
               }
             }
-          }
-
-          &.is-row-group {
-            border: none;
-            border-bottom: none;
-            td {
-              padding-left: 0;
-              padding: 0;
-            }
-          }
-
-          &.is-flatten-count {
-            height: 24px;
           }
         }
         td {
@@ -315,7 +301,7 @@
     }
 
     &.is-scroll-mode {
-      // max-height: 600px;
+      max-height: 600px;
       overflow-y: auto;
     }
   }
