feat: 修复验收文档问题

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/detect-rules/threshold.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/detect-rules/threshold.scss
@@ -23,6 +23,10 @@
       .icon-tips {
         color: #3a84ff;
       }
+
+      .text {
+        vertical-align: middle;
+      }
     }
 
     .method {
