--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form.scss
@@ -25,6 +25,10 @@
         min-height: 20px;
         line-height: 20px;
       }
+
+      .monitor-data {
+        cursor: pointer;
+      }
     }
 
     &.submit-btns {
