feat: 1. 监控数据描述增加tooltips 2. 检测规则增加默认单位

--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form.scss
@@ -27,7 +27,10 @@
       }
 
       .monitor-data {
+        display: inline-block;
+        line-height: 20px;
         cursor: pointer;
+        border-bottom: 1px dashed #979ba5;
       }
     }
 
