--- a/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form-detail.scss
+++ b/bkmonitor/webpack/src/apm/pages/alarm-template/components/template-form/template-form-detail.scss
@@ -19,6 +19,13 @@
       font-size: 12px;
       color: #313238;
 
+      .monitor-data {
+        display: inline-block;
+        line-height: 20px;
+        cursor: pointer;
+        border-bottom: 1px dashed #979ba5;
+      }
+
       .detect-text {
         font-weight: 700;
         color: #313238;
