--- a/bkmonitor/webpack/src/trace/pages/alarm-center/components/ai-highlight-card/ai-highlight-card.scss
+++ b/bkmonitor/webpack/src/trace/pages/alarm-center/components/ai-highlight-card/ai-highlight-card.scss
@@ -2,7 +2,6 @@
   --border-width: 1px;
   --border-left-width: 4px;
 
-  display: flex;
   padding: 6px 4px;
   background-image:
     linear-gradient(96deg, #f5f7ff 0%, #eff3fe 100%), linear-gradient(180deg, #235dfa 0%, #c383ee 100%),
@@ -21,36 +20,40 @@
   border-left-width: var(--border-left-width);
   border-radius: 2px;
 
-  .ai-favicon {
-    flex-shrink: 0;
-    width: 20px;
-    height: 20px;
-    margin-right: 4px;
+  .ai-highlight-card-header {
+    display: flex;
 
-    & > img {
-      width: 100%;
-      height: 100%;
-      object-fit: contain;
+    .ai-favicon {
+      flex-shrink: 0;
+      width: var(--ai-favicon-size);
+      height: var(--ai-favicon-size);
+
+      & > img {
+        width: 100%;
+        height: 100%;
+        object-fit: contain;
+      }
     }
-  }
 
-  .ai-highlight-card-main {
-    .card-main-title {
+    .ai-highlight-card-header-title {
+      margin-left: 4px;
+
       /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
       font-family: PingFangHK-Semibold;
       font-size: 12px;
       font-weight: 600;
-      line-height: 20px;
+      line-height: var(--ai-favicon-size);
       color: #235dfa;
     }
+  }
 
-    .card-main-content {
-      margin-top: 4px;
+  .ai-highlight-card-main {
+    padding-left: calc(var(--ai-favicon-size) + 4px);
+    margin-top: 4px;
 
-      /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
-      font-family: PingFangSC-Regular;
-      line-height: 20px;
-      color: #4d4f56;
-    }
+    /* stylelint-disable-next-line font-family-no-missing-generic-family-keyword */
+    font-family: PingFangSC-Regular;
+    line-height: 20px;
+    color: #4d4f56;
   }
 }
