--- a/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-metrics-dashboard/alarm-metrics-dashboard.scss
+++ b/bkmonitor/webpack/src/trace/pages/alarm-center/components/alarm-metrics-dashboard/alarm-metrics-dashboard.scss
@@ -32,6 +32,10 @@
         grid-template-columns: repeat(var(--dashboard-grid-col), 1fr);
         gap: 12px;
         padding-top: 12px;
+
+        .explore-chart {
+          height: 250px;
+        }
       }
     }
 
