--- a/bkmonitor/webpack/src/trace/pages/alarm-center/detail-common/components/panel-log/index.scss
+++ b/bkmonitor/webpack/src/trace/pages/alarm-center/detail-common/components/panel-log/index.scss
@@ -8,7 +8,7 @@
     }
   }
   .panel-log-filter {
-    margin: 0 12px;
+    margin: 0 12px 8px 12px;
     .vue3_retrieval-filter__component {
       border: 1px solid #dcdee5;
       border-radius: 2px;
