feat:仪表盘功能添加国际化处理和修改样式

--- a/bklog/web/src/views/retrieve-v2/search-result-tab/components/dashboard-dialog.scss
+++ b/bklog/web/src/views/retrieve-v2/search-result-tab/components/dashboard-dialog.scss
@@ -3,6 +3,9 @@
   cursor: pointer;
 }
 
+.dashboard-form-wrapper {
+  padding: 0 24px;
+}
 .dashboard-extension-flex {
   display: flex;
   gap: 8px;
